@@ -8,10 +8,9 @@
   <name>trex2</name>
   <url>https://github.com/trex-paxos/trex2</url>
   <properties>
-    <maven.compiler.source>23</maven.compiler.source>
-    <maven.compiler.target>23</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    <maven.compiler.release>22</maven.compiler.release>
   </properties>
   <modules>
     <module>trex2-lib</module>
@@ -36,12 +35,9 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.10.1</version>
+        <version>3.13.0</version>
         <configuration>
-          <source>23</source>
-          <target>23</target>
           <compilerArgs>
-            <arg>--enable-preview</arg>
             <arg>-Werror</arg>
           </compilerArgs>
         </configuration>
